Restructure javascript handling for different pages.

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,7 @@
 {
-    "/js/app.js": "/js/app.js?id=66a2f7e8ef0886f1cde9",
+    "/js/app.js": "/js/app.js?id=923713110b768e8070a1",
     "/css/app.css": "/css/app.css?id=4a4a23deb05c61931f59",
+    "/js/listing.js": "/js/listing.js?id=433d0b7b072a71e56a2b",
     "/js/manifest.js": "/js/manifest.js?id=45967c0f1cee02cf40ee",
-    "/js/vendor.js": "/js/vendor.js?id=da644edf6787fff5e646"
+    "/js/vendor.js": "/js/vendor.js?id=0e78c00b5498e1c0a8e7"
 }
