Add products detail page for no variation.

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,7 @@
 {
     "/js/app.js": "/js/app.js?id=d07e619cfa8be8e1f90e",
-    "/css/app.css": "/css/app.css?id=b040f168ff314108c2b6",
+    "/css/app.css": "/css/app.css?id=69ae86e4aad3e603b26d",
+    "/js/detailspage.js": "/js/detailspage.js?id=bcc5367fbac257fd9734",
     "/js/listing.js": "/js/listing.js?id=98fa750634463c93eb2b",
     "/js/manifest.js": "/js/manifest.js?id=45967c0f1cee02cf40ee",
     "/js/vendor.js": "/js/vendor.js?id=2a5b4ab135cce8b7eab3"
