--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,8 +1,8 @@
 {
-    "/js/app.js": "/js/app.js?id=2b27d7e06634baacb9c8",
-    "/css/app.css": "/css/app.css?id=8f260fbcf68c8f5af63e",
-    "/js/detailspage.js": "/js/detailspage.js?id=d4276f3c444d7a145050",
-    "/js/listing.js": "/js/listing.js?id=1d5dda8dedb75dbf304b",
-    "/js/manifest.js": "/js/manifest.js?id=45967c0f1cee02cf40ee",
-    "/js/vendor.js": "/js/vendor.js?id=8c8bb94160e5b925088c"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css",
+    "/js/detailspage.js": "/js/detailspage.js",
+    "/js/listing.js": "/js/listing.js",
+    "/js/manifest.js": "/js/manifest.js",
+    "/js/vendor.js": "/js/vendor.js"
 }
