--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,8 +1,9 @@
 {
-    "/js/app.js": "/js/app.js?id=b8833835ae11b6490d1d",
-    "/css/app.css": "/css/app.css?id=eae892753a188430eca6",
-    "/js/detailspage.js": "/js/detailspage.js?id=918e19b24ce46e9c6dfe",
-    "/js/listing.js": "/js/listing.js?id=57ff2a2170f118fcafbc",
-    "/js/manifest.js": "/js/manifest.js?id=45967c0f1cee02cf40ee",
-    "/js/vendor.js": "/js/vendor.js?id=8c8bb94160e5b925088c"
+    "/js/app.js": "/js/app.js?id=65322ef54f169e83f5af",
+    "/css/app.css": "/css/app.css?id=448d5461243ce4bb1611",
+    "/js/detailspage.js": "/js/detailspage.js?id=947c7381c4a5ed45ab33",
+    "/js/listing.js": "/js/listing.js?id=a2cc6eeddab4f6878d57",
+    "/js/manifest.js": "/js/manifest.js?id=af92f221c524c24ee9b3",
+    "/js/search.js": "/js/search.js?id=6201649d50b26ae63896",
+    "/js/vendor.js": "/js/vendor.js?id=3ec25ca78c6aa21ce512"
 }
