--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
         "laravel/socialite": "^4.1",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "sendgrid/sendgrid": "~7"
+
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
