--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,9 +1,10 @@
 {
-    "/js/app.js": "/js/app.js?id=c963dca149a5bd95525f",
-    "/css/app.css": "/css/app.css?id=952635ba2c5b1a9670a3",
-    "/js/detailspage.js": "/js/detailspage.js?id=96e485e4ea010f865ddb",
-    "/js/listing.js": "/js/listing.js?id=0be58a3c56a01833197f",
+    "/js/app.js": "/js/app.js?id=13998f90baa2e95617f7",
+    "/css/app.css": "/css/app.css?id=3f3f618822eba31aa35d",
+    "/js/detailOverview.js": "/js/detailOverview.js?id=ecc8a9316ede71d9dcb7",
+    "/js/detailspage.js": "/js/detailspage.js?id=aeff2d0219849227c3da",
+    "/js/listing.js": "/js/listing.js?id=3b890b5bb136132f8e35",
     "/js/manifest.js": "/js/manifest.js?id=dcc1db63d839fee1235d",
-    "/js/search.js": "/js/search.js?id=5f541c8db7178f44621f",
+    "/js/search.js": "/js/search.js?id=b4257bc44c7df41fd22b",
     "/js/vendor.js": "/js/vendor.js?id=1cedbe9a9f40d888987b"
 }
