--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.10.2",
         "drift-zoom": "^1.3.5",
+        "ekko-lightbox": "^5.3.0",
         "ion-rangeslider": "^2.3.0",
+        "markdown-it": "^10.0.0",
         "slick-carousel": "^1.8.1"
     }
 }
