--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,10 +1,11 @@
 {
-    "/js/app.js": "/js/app.js?id=42f6e625c5dfcabc1291",
-    "/css/app.css": "/css/app.css?id=d2ba15d7d1df90e0ab2f",
-    "/js/detailOverview.js": "/js/detailOverview.js?id=09f1cb044f680cac049d",
-    "/js/detailspage.js": "/js/detailspage.js?id=9976864e60000e0b0459",
-    "/js/listing.js": "/js/listing.js?id=5a90672c501a3f647727",
+    "/js/app.js": "/js/app.js?id=e65ceb55f86b2f2c05fd",
+    "/css/app.css": "/css/app.css?id=c5fe6ca49fe7f6eeabad",
+    "/js/brands.js": "/js/brands.js?id=d6845812bbd8b5c42eb7",
+    "/js/detailOverview.js": "/js/detailOverview.js?id=916a312f74b5f5275abd",
+    "/js/detailspage.js": "/js/detailspage.js?id=fbf1dc0b0dd7f1ffa25c",
+    "/js/listing.js": "/js/listing.js?id=1749bbf63ca54b69654b",
     "/js/manifest.js": "/js/manifest.js?id=af92f221c524c24ee9b3",
-    "/js/search.js": "/js/search.js?id=37d2da27786ab6686e3f",
-    "/js/vendor.js": "/js/vendor.js?id=39ea411b2092385ffae3"
+    "/js/search.js": "/js/search.js?id=73f2188e898dfcef4244",
+    "/js/vendor.js": "/js/vendor.js?id=359cfc045cac36e248f5"
 }
