--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,15 +1,13 @@
-
 {
-
     "/js/app.js": "/js/app.js?id=828fdd569ea867f63076",
-    "/css/app.css": "/css/app.css?id=86eb2acf3a0ad1bda934",
-    "/js/brands.js": "/js/brands.js?id=ce053ee9e2bbf19938de",
+    "/css/app.css": "/css/app.css?id=c4101aae61feb40b0b96",
+    "/js/brands.js": "/js/brands.js?id=da1c7d77b5bfc57959e7",
     "/js/detailOverview.js": "/js/detailOverview.js?id=9877160aa95d3c27bff8",
-    "/js/detailspage.js": "/js/detailspage.js?id=c77aae6a5d969bb1d3e2",
-    "/js/listing.js": "/js/listing.js?id=0f13c83c4ed1aa81fe6a",
-    "/js/listing.mobile.js": "/js/listing.mobile.js?id=69257e38dc2ba44f7bf4",
+    "/js/detailspage.js": "/js/detailspage.js?id=60234ecd224b488fdc19",
+    "/js/listing.js": "/js/listing.js?id=5a26baec77c1eca1cdbc",
+    "/js/listing.mobile.js": "/js/listing.mobile.js?id=80a2533fc70094a87ed3",
     "/js/manifest.js": "/js/manifest.js?id=af92f221c524c24ee9b3",
-    "/js/search.js": "/js/search.js?id=eb7d1fa43c0ed023ad7a",
-    "/js/vendor.js": "/js/vendor.js?id=52332f7a8a0abceb6815"
-
+    "/js/search.js": "/js/search.js?id=7064436ee918fb2b00ab",
+    "/js/vendor.js": "/js/vendor.js?id=bb719fc1c18c027e0d06",
+    "/js/wishlist.js": "/js/wishlist.js?id=db1c4fbeb08997d9de64"
 }
