--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,12 @@
         "php": "^7.1.3",
         "davejamesmiller/laravel-breadcrumbs": "5.x",
         "fideloper/proxy": "^4.0",
+        "hivokas/laravel-passport-social-grant": "^1.1",
         "laravel/framework": "5.8.*",
+        "laravel/passport": "^7.5.1",
         "laravel/socialite": "^4.1",
         "laravel/tinker": "^1.0",
-        "sendgrid/sendgrid": "~7",
-        "laravel/passport": "^7.5.1"
+        "sendgrid/sendgrid": "~7"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
