--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/passport": "^7.5.1",
         "laravel/socialite": "^4.1",
         "laravel/tinker": "^1.0",
-        "sendgrid/sendgrid": "~7"
+        "sendgrid/sendgrid": "~7",
+        "stripe/stripe-php": "^7.29"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
