--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.1.3",
         "davejamesmiller/laravel-breadcrumbs": "5.x",
         "fideloper/proxy": "^4.0",
+        "guzzlehttp/guzzle": "^6.5",
         "hivokas/laravel-passport-social-grant": "^1.1",
         "laravel/framework": "5.8.*",
         "laravel/passport": "^7.5.1",
