--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/passport": "^7.5.1",
         "laravel/socialite": "^4.1",
         "laravel/tinker": "^1.0",
+        "nesbot/carbon": "^2.35",
         "sendgrid/sendgrid": "~7",
         "stripe/stripe-php": "^7.29"
     },
